# ChangeLog for dev-libs/nss
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.157 2009/09/24 23:35:09 anarchy Exp $

  11 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/nss-3.12.4-solaris-gcc.patch, +files/nss-3.12.5-gentoo-fixups.diff,
  +files/nss-3.12.6-gentoo-fixup-warnings.patch, +nss-3.12.8.ebuild,
  +metadata.xml:
  bump and sync version

  30 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/gentoo-fixups-1.diff, -nss-3.12.6-r101.ebuild:
  remove old revision

  30 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru> -nss-9999.ebuild:
  delete live ebuild, fix 93 issue

  30 Jun 2010; <slep@gentoo.org> +nss-3.12.6-r102.ebuild:
  sync witch portage tree

  06 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/nss-3.12.5-gentoo-fixups.diff, +nss-3.12.6-r101.ebuild,
  +files/nss-3.12.6-gentoo-fixup-warnings.patch:
  fix install phase in-tree ebuild

  31 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/gentoo-fixups-1.diff, +nss-9999.ebuild, +metadata.xml:
  add live version

*nss-9999 (31 Okt 2009)


*nss-3.12.4-r2 (24 Sep 2009)

  24 Sep 2009; Jory A. Pratt <anarchy@gentoo.org> -nss-3.12.4.ebuild,
  -nss-3.12.4-r1.ebuild, +nss-3.12.4-r2.ebuild:
  re-enable libz system support, this was drop'd due to many upstream bugs
  reporting libz issues. These were system configure errors.

*nss-3.12.4-r1 (20 Sep 2009)

  20 Sep 2009; Jory A. Pratt <anarchy@gentoo.org> +nss-3.12.4-r1.ebuild:
  remove system zlib support, re-enable ECC export

  16 Sep 2009; Jory A. Pratt <anarchy@gentoo.org> nss-3.12.4.ebuild:
  Make pkg_postinst() clearer on revdep-rebuild usage.

  15 Sep 2009; Jory A. Pratt <anarchy@gentoo.org> nss-3.12.4.ebuild:
  Add warning about binary breakage with soname change

*nss-3.12.4 (15 Sep 2009)

  15 Sep 2009; Jory A. Pratt <anarchy@gentoo.org> +nss-3.12.4.ebuild,
  +files/nss-3.12.4-gentoo-fixups-1.diff: