@@ -2,6 +2,8 @@ AUX nss-3.12.4-solaris-gcc.patch 842 RMD160 83324ac0ecde97e1976bf5162e7ce01ab2ca
 AUX nss-3.12.5-gentoo-fixups.diff 6669 RMD160 af35db729406c62d0e8582e7db18f2f80a71c776 SHA1 e50b55be77f62516f735acfb41a1e47509572cd8 SHA256 24593640e682cb7a831cd8a0888397b7b20880c9cfabed76bb647cc12385aef6
 AUX nss-3.12.6-gentoo-fixup-warnings.patch 301 RMD160 9bd51d07ba7e568b6f29b7c347a71c1717912234 SHA1 620bec7adc3c36c94075bffead0ce73cd8d3d7df SHA256 e14b227f762bd21875208e241029966b1e3873edfdf0592ca69bd9714859d329
 DIST nss-3.12.8.tar.gz 5951955 RMD160 08f8118e194fcfd5225c4dc64873f0883b8278b6 SHA1 4469e79a806494c12a297213392699ca41c2c899 SHA256 9178ce29749e8d09cb93ce70c38f1c2c10630926b2bb7259c7dfff42cb090c14
+DIST nss-3.12.9.tar.gz 5984608 RMD160 d4da08fb2f363ea5ea90599bd90e54aaad0a3e56 SHA1 5b49da5e6f61610a718fcd0838dac365a5e17de2 SHA256 0dc77718016654bbf6ffdda09e968e2b2875c05dacec967abf5725b5daae5978
 EBUILD nss-3.12.8.ebuild 6888 RMD160 83e4cc8638c8683b85ce0fc9cbf933af4fb52a31 SHA1 c4633ba7478fcf5f35af45497fe412cf8740794f SHA256 422b7453ab8222aa0ba764f5b1c8afccd5c459b838bf4e292e3ca4896fb88e43
-MISC ChangeLog 20610 RMD160 586952139ac24e2a16c7e8463c54c13cda3ca4eb SHA1 6eea6bfafd3d66477939f62cdb1461925aba22e9 SHA256 faec8d2c1b756face731e29a297a59eab38648d4e102f851e1b08c0102dca5d9
-MISC metadata.xml 347 RMD160 1d6d3bd5e5de7229796ba2a7d7cd987deb44c0aa SHA1 359874c89f505297f0ebcaa243d2945e63445125 SHA256 c6ad33fb866cf71d8f2d76a73b639e5b7e1ed53dbb29fb7d3f9d41e8fd1a6fd6
+EBUILD nss-3.12.9.ebuild 6899 RMD160 1ebf78b8a184ec9f0392b709c25f36c942939638 SHA1 285f4ce4b18cb5d6d7ded9e9afaaf464ff0349a2 SHA256 cf6eb4607a2c642122a7c89307ee29bb08487b53ec3414b59e022bccb1438040
+MISC ChangeLog 20755 RMD160 95423ecf7d67994e3107517de467e5531e29905f SHA1 5533744ea9c3089df52ce3b13eb9cf81f757df82 SHA256 c12d5837c94cd484eb75e84bacb75272efa7a1eef330016cf5a4eebefef1296c
+MISC metadata.xml 339 RMD160 3aca6553300cc043d8c6862c4fae0db4ed2b7d98 SHA1 b7739ac8a7feafb33012bea61bab533d056543e6 SHA256 c4520defbcc68e275c5ef3943381e414b5be5b6f66980918baf7de83618e998a
