@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/nss
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.157 2009/09/24 23:35:09 anarchy Exp $
+
+*nss-3.12.9 (24 Jan 2011)
+
+  24 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru> +nss-3.12.9.ebuild:
+  vimp, recommit from official portage tree
 
   11 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   +files/nss-3.12.4-solaris-gcc.patch, +files/nss-3.12.5-gentoo-fixups.diff,
